# dynamic_robot

./: .gitignore  README.md
src/my_robot_controller/: package.xml  setup.py
src/my_robot_controller/my_robot_controller/: avoidance_node.py  avoidance_node_v2.py  goal_avoid_node.py  moving_obstacle.py
src/my_robot_controller/my_robot_controller/archive/: avoidance_node_v2.py  goal_avoid_node.py
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/launch/: rsp.launch.py  sim.launch.py  view_robot.launch.py
src/my_robot_description/urdf/: inertial_macros.xacro  robot.urdf.xacro
src/my_robot_description/worlds/: obstacle_world.sdf
